--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "eslint": "^4.6.1",
     "express": "^4.15.4",
     "morgan": "^1.8.2",
-    "nodemon": "^1.12.0"
+    "nodemon": "^1.12.0",
+    "sequelize": "^4.8.4",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
