--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "eslint": "^4.6.1",
     "express": "^4.15.4",
+    "joi": "^11.0.2",
     "morgan": "^1.8.2",
     "nodemon": "^1.12.0",
     "sequelize": "^4.8.4",
